@@ -28,7 +28,25 @@ However, the output that ts2python produces is backwards compatible
 with Python 3.7, unless otherwise specified (see below). The only
 dependency of ts2python is the parser-generator DHParser_.
 
-Generating Python-pendants for Typescript-interfaces is as simple as calling::
+Usage
+-----
+
+The easiest way to use ts2python is by running **ts2pythonExplorer**,
+which provides a simple graphical user interface to ts2python.
+You can just paste your Typescript-Interface definitions into
+the top text-area and click on the "Generate Python-Code"-button.
+You can then simply copy the generated code from the text-area
+below into you Python source code.
+
+ts2pythonExplorer also allows you to experiment with different
+version-compatibility settings for the generated Python-Code.
+These settings can be saved as a configuration file to your
+project's home-directory from where the ts2pyhon-command will
+automatically apply them without the need of specifying any
+particular command line options every time it is called.
+
+From the command line, generating Python-pendants for Typescript-interfaces
+is as simple as calling::
 
    $ ts2python interfaces.ts
 
@@ -40,7 +58,10 @@ For every typescript interface in the ``interfaces.ts`` file the generated
 Python module contains a TypedDict-class with the same name that defines
 the same data structure as the Typescript-interface. Typescript-data serialized
 as json can simply be deserialized by Python-code as long as you know the
-type of the root data structure beforehand, e.g.::
+type of the root data structure beforehand. Say, the root data structure
+is ``RequestMessage`` than retrieving the RequestMessage-object from a
+json-string generated by a Typescript-script requires nothing more than
+deserializing this string::
 
     import json
     request_msg: RequestMessage = json.loads(input_data)
@@ -161,6 +182,15 @@ instance-variables of the ts2pythonCompiler-object, namely,
 ``known_types``, ``local_classes``, ``base_classes``, ``obj_name``,
 ``scope_type``, ``optional_keys``. Lookout for where those stacks are used
 when you to change something in the ts2python-source yourself!
+
+Alternatively, you can also use ts2python to just output the AST of
+a Typescript-file with interface definitions by using the ``--target AST``
+command line swith and then start from there. Example::
+
+    $ ts2python --target AST --serialize XML interfaces.ts
+
+Other serialiazations for the AST are available: SXML (S-expression),
+ndst, json or simply an indented tree.
 
 .. _ts2python:  https://github.com/jecki/ts2python/
 .. _Typescript-interfaces: https://www.typescriptlang.org/docs/handbook/2/objects.html
