@@ -6,10 +6,10 @@ UseLiteralType = False           # PEP 584, 586, Python 3.8
 UseTypeUnion = False             # PEP 604, Python 3.10
 UseExplicitTypeAlias = False     # PEP 613, Python 3.10
 UseVariadicGenerics = False      # PEP 646, Python 3.11
-UseNotRequired = False           # PEP 655, Python 3.11
+UseNotRequired = True            # PEP 655, Python 3.11
 UseTypeParameters = False        # PEP 695, Python 3.12
-AllowReadOnly = False            # PEP 705, Python 3.13
-AssumeDeferredEvaluation = True  # PEP 649, 749, Python 3.14
+AllowReadOnly = True             # PEP 705, Python 3.13
+AssumeDeferredEvaluation = False # PEP 649, 749, Python 3.14
 KeepMultilineComments = True     # keep comments in AST
 
 [DHParser]
